--- a/Research Development/index.html
+++ b/Research Development/index.html
@@ -3,11 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <title>Redirect</title>
-<meta http-equiv="refresh" content="1;URL= URL=http://www.virginia.edu/vpr/resources-for-researchers/research-development.html">
+<link href="../all-vpr-web/dist/css/loader.css" type="text/css" rel="stylesheet"> 
+<meta http-equiv="refresh" content="1;URL=http://www.virginia.edu/vpr/resources-for-researchers/research-development.html">
 <meta name="keywords" content="automatic redirection">
 </head>
 
 <body>
-  <p>You should be redirected. If you are'nt, click <a href="http://www.virginia.edu/vpr/resources-for-researchers/research-development.html">this link</a>.</p>
+<div class="loader">
+  <div id="largeBox"></div>
+  <div id="smallBox"></div>
+</div>
+  <p>You should be redirected soon.
+  <br>If you aren't, click <a href="http://www.virginia.edu/vpr/resources-for-researchers/research-development.html">this link</a>.</p>
 </body>
 </html>
