--- a/centers/index.html
+++ b/centers/index.html
@@ -101,7 +101,7 @@
         <div><a href="http://www.uvaari.org/site/">Applied Research Institute (ARI)</a></div>
         <div><a href="http://braininstitute.virginia.edu/">Brain Institute</a></div>
         <div><a href="https://dsi.virginia.edu/">Data Science Institute</a> (DSI)</div>
-        <div><a href="http://www.virginia.edu/vpr/resilience/">Environmental Resilience Institute</a></div>
+        <div><a href="https://www.eri.virginia.edu">Environmental Resilience Institute</a></div>
         <div><a href="http://www.virginia.edu/vpr/Global/">Global Infectious Diseases Institute</a></div>
         <div>Pan-University Institute Proposal process can be found <a href="http://planning.virginia.edu/pan-university-institutes">here</a>. </div>
         <br>
