--- a/Compliance/index.html
+++ b/Compliance/index.html
@@ -58,8 +58,10 @@
           <li><a href="index.html">Compliance</a></li>
           <li><a href="../projects-and-initiatives.html">Initiatives</a></li>
           <li><a href="https://lvg.virginia.edu/">Licensing</a></li>
-          <li><a href="http://www.virginia.edu/sponsoredprograms/">Sponsorship</a></li>
+          <li><a href="http://www.virginia.edu/sponsoredprograms/">Sponsored Programs</a></li>
           <li><a href="../resources-for-researchers/index.html">Tools</a></li>
+          <li><a href="http://www.virginia.edu/vpr/news.html">News</a></li>
+          <li><a href="https://securelb.imodules.com/s/1535/16-uva/index.aspx?sid=1535&gid=16&pgid=684&cid=1509&dids=1161.1162.1163&bledit=1">Give</a></li>
         </ul>
       </div>
     </div>
@@ -101,8 +103,6 @@
   </div>
 </div>
 <!-- InstanceBeginEditable name="CenterContent" --> 
-<!--Begin: UVA Brand Template - Main Content -->
-
 <div class="container-fluid">
   <div class="row dotted">
     <div class="main-content">
@@ -161,9 +161,7 @@
   <div class="row dotted">
     <div class="main-content">
       <h3>Compliance Program Contact Information</h3>
-      <p>If you're not sure who to contact then reach out to Cheryl Wagner, cheryl-vpr@virginia.edu
-        </bold>
-      </p>
+      <p>If you're not sure who to contact then reach out to Cheryl Wagner, cheryl-vpr@virginia.edu</p>
       <table class="table table-striped">
         <tr>
           <th>Compliance Program</th>
@@ -330,7 +328,6 @@
     </div>
   </div>
 </div>
-<!--End: UVA Brand Template - Main Content --> 
 <!-- InstanceEndEditable -->
 <div class="container-fluid dotted">
   <div class="row">
