--- a/UAS/index.html
+++ b/UAS/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="en"><!-- InstanceBegin template="/Templates/home-template.dwt" codeOutsideHTMLIsLocked="false" -->
+<html lang="en">
+<!-- InstanceBegin template="/Templates/home-template.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -58,8 +59,10 @@
           <li><a href="../Compliance/index.html">Compliance</a></li>
           <li><a href="../projects-and-initiatives.html">Initiatives</a></li>
           <li><a href="https://lvg.virginia.edu/">Licensing</a></li>
-          <li><a href="http://www.virginia.edu/sponsoredprograms/">Sponsorship</a></li>
+          <li><a href="http://www.virginia.edu/sponsoredprograms/">Sponsored Programs</a></li>
           <li><a href="../resources-for-researchers/index.html">Tools</a></li>
+          <li><a href="http://www.virginia.edu/vpr/news.html">News</a></li>
+          <li><a href="https://securelb.imodules.com/s/1535/16-uva/index.aspx?sid=1535&gid=16&pgid=684&cid=1509&dids=1161.1162.1163&bledit=1">Give</a></li>
         </ul>
       </div>
     </div>
@@ -98,27 +101,38 @@
         <p>The Office of the VP for Research manages policies and procedures for UAS's at UVA. </p>
         <p><strong>If you are considering   operating a UAS on Grounds you must apply using the form linked below.</strong></p>
         <p>We promote safe  and efficient operation of unmanned aircraft systems in furtherance of the  goals and mission of the University. The policy and its procedures also are intended to help protect the privacy and  security of students, employees, patients, and visitors. Unmanned aircraft systems are commonly  referred to as drones.</p>
-        <div class="bbb-set">
-          <a href="http://www.virginia.edu/vpr/UAS/operate.html"><h3 class="bbb">How to operate a UAS at UVA</h3></a><br>
-          <a href="http://www.virginia.edu/vpr/docs/Drones.Policy.09DEC16.docx"><h3 class="bbb">Policy</h3></a>
-          <a href="http://www.virginia.edu/vpr/UAS/maps.html"><h3 class="bbb">Maps</h3></a>
-        </div>
+        <div class="bbb-set"> <a href="http://www.virginia.edu/vpr/UAS/operate.html">
+          <h3 class="bbb">How to operate a UAS at UVA</h3>
+          </a><br>
+          <a href="http://www.virginia.edu/vpr/docs/Drones.Policy.09DEC16.docx">
+          <h3 class="bbb">Policy</h3>
+          </a> <a href="http://www.virginia.edu/vpr/UAS/maps.html">
+          <h3 class="bbb">Maps</h3>
+          </a> </div>
       </div>
       <!-- InstanceEndEditable --></div>
   </div>
 </div>
-<!-- InstanceBeginEditable name="CenterContent" --> 
+<!-- InstanceBeginEditable name="CenterContent" -->
 <div class="container-fluid">
   <div class="main-content">
     <div class="row dotted">
       <div class="col-sm-6 col-sm-offset-1">
         <h3>Need more information?</h3>
-        <p>Read more on the FAA site about starting UAS operations or contact:<br>Dave Hudson<br>
+        <p>Read more on the FAA site about starting UAS operations or contact:<br>
+          Dave Hudson<br>
           Operations  Director<br>
           <a href="mailto:uasoperationsmanager@virginia.edu">uasoperationsmanager@virginia.edu</a> </p>
       </div>
-      <div class="col-sm-5">
-        <img src="../all-vpr-web/img/uas01.jpg" width="100%"/>
+      <div class="col-sm-5"> <img src="../all-vpr-web/img/uas01.jpg" width="100%"/> </div>
+    </div>
+    <div class="row dotted">
+      <div class="col">
+        <h3>
+        UAS Map
+        </h2>
+        <p><a href="../all-vpr-web/img/Drone No-Fly Zone-Jan2017.jpg"><img src="../all-vpr-web/img/Drone No-Fly Zone-Jan2017.jpg" alt="Resilience Forum"></a> </p>
+        <li><a href="../all-vpr-web/assets/Drone No-Fly Zone-Jan2017.pdf">Download this Map as a PDF</a></li>
       </div>
     </div>
   </div>
@@ -181,4 +195,5 @@
   </div>
 </footer>
 </body>
-<!-- InstanceEnd --></html>
+<!-- InstanceEnd -->
+</html>
