--- a/UAS/operate.html
+++ b/UAS/operate.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="en"><!-- InstanceBegin template="/Templates/home-template.dwt" codeOutsideHTMLIsLocked="false" -->
+<html lang="en">
+<!-- InstanceBegin template="/Templates/home-template.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +10,7 @@
 <meta name="author" content="IT Services, Office of the VP for Research">
 <link rel="icon" href="../all-vpr-web/img/favicon.ico">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Office of the Vice President for Research</title>
+<title>UAS</title>
 <!-- InstanceEndEditable -->
 <!--
 	<script src="//use.typekit.net/tgy5tlj.js"></script>
@@ -96,72 +97,46 @@
     </div>
     <div class="col-sm-8"><!-- InstanceBeginEditable name="PageTitleTop" -->
       <div class="main-content">
-        <h2 class="vpr-page-title">Institutes & Centers</h2>
-        <p>A collection of links to UVA's various Institutes and Centers.<br> For any inquiries contact Cheryl Wagner, <a href="mailto:cheryl-vpr@virginia.edu">cheryl-vpr@virginia.edu </a></p>
-        
-        <h3>Pan-University Institutes</h3>
-        <div><a href="http://www.uvaari.org/site/">Applied Research Institute (ARI)</a></div>
-        <div><a href="http://braininstitute.virginia.edu/">Brain Institute</a></div>
-        <div><a href="https://dsi.virginia.edu/">Data Science Institute</a> (DSI)</div>
-        <div><a href="https://www.eri.virginia.edu">Environmental Resilience Institute</a></div>
-        <div><a href="http://www.virginia.edu/vpr/Global/">Global Infectious Diseases Institute</a></div>
-        <div>Pan-University Institute Proposal process can be found <a href="http://planning.virginia.edu/pan-university-institutes">here</a>. </div>
-        <br>
-        <h3>School Centers & Institutes</h3>
-        <div><a href="http://www.arch.virginia.edu/"></a></div>
-        <div ><a href="http://www.arch.virginia.edu/">Architecture (School of Architecture)</a></div>
-        <div></div>
-        <div><a href="http://as.virginia.edu/academics/centers"></a></div>
-        <div ><a href="http://as.virginia.edu/academics/centers">Arts &amp; Sciences (College and Graduate School of Arts &amp; Sciences)</a></div>
-        <div></div>
-        <div><a href="http://www.darden.virginia.edu/faculty-research/centers/"></a></div>
-        <div ><a href="http://www.darden.virginia.edu/faculty-research/centers/">Business (Darden School of Business)</a></div>
-        <div></div>
-        <div><a href="https://www.commerce.virginia.edu/centers"></a></div>
-        <div ><a href="https://www.commerce.virginia.edu/centers">Commerce (McIntire School of Commerce)</a></div>
-        <div></div>
-        <div><a href="http://www.scps.virginia.edu/"></a></div>
-        <div ><a href="http://www.scps.virginia.edu/">Continuing Education (School of Continuing &amp; Professional Studies)</a></div>
-        <div></div>
-        <div><a href="http://curry.virginia.edu/research/centers"></a></div>
-        <div ><a href="http://curry.virginia.edu/research/centers">Education (Curry School of Education)</a></div>
-        <div><a href="http://www.seas.virginia.edu/research/centers.php"></a></div>
-        <div ><a href="http://www.seas.virginia.edu/research/centers.php">Engineering (School of Engineering and Applied Science)</a></div>
-        <div></div>
-        <div><a href="http://www.law.virginia.edu/html/academics/centers.htm"></a></div>
-        <div ><a href="http://www.law.virginia.edu/html/academics/centers.htm">Law (School of Law)</a></div>
-        <div></div>
-        <div><a href="https://med.virginia.edu/office-for-research/resources-and-collaborators/research-centers-institutes-and-programs/"></a></div>
-        <div ><a href="https://med.virginia.edu/office-for-research/resources-and-collaborators/research-centers-institutes-and-programs/">Medicine (School of Medicine)</a></div>
-        <div></div>
-        <div><a href="https://www.nursing.virginia.edu/research/"></a></div>
-        <div ><a href="https://www.nursing.virginia.edu/research/">Nursing (School of Nursing)</a></div>
-        <div></div>
-        <div><a href="http://batten.virginia.edu/research/centers"></a></div>
-        <div ><a href="http://batten.virginia.edu/research/centers">Public Policy (Frank Batten School of Leadership and Public Policy)</a></div>
-        <div><a href="http://provost.virginia.edu/schools-and-reporting-units"></a></div>
-        <div ><a href="http://provost.virginia.edu/schools-and-reporting-units">Provost Office</a></div>
+        <h2 class="vpr-page-title">Operating a UAS at UVA</h2>
+        <h3>Before you fly the first time:</h3>
+        <ul>
+          <li>Register your UAS on the <a href=" https://registermyuas.faa.gov/">FAA Drone Registration site.</a> The FAA requires that every UAS must be registered before flight. While you can register your UAS yourself (with UVA as the owner) it would be best to ask the UVA Operations Manager (OM) to do this for you. The OM has established an account for UVA and the process takes just a few minutes. Contact the Operations Manager at <a href="mailto:uasoperationsmanager@virginia.edu">uasoperationsmanager@virginia.edu</a></li>
+          <a href="https://registermyuas.faa.gov">
+          <h4 class="bbb">FAA Drone Registration</h4>
+          </a> <a href="https://drone-registration.net/?gclid=CIT9nPPQutICFZSNswod8ZwNyw">
+          <h4 class="bbb">Alternative Drone Registration</h4>
+          </a>
+          <li>A UAS Pilot’s license is required to operate a UAS in any setting other than as a hobbyist. The process for obtaining a license is reasonably simple, though a written test is required. The requirements for pilots holding licenses under Part 161 (“private pilots”) are even simpler. Under some circumstances (e.g., you only wish to do one or two flights) it might be easier to ask one of the other UVA UAS pilots to act as Remote Pilot in Command. The UVA OM can suggest possible pilots.</li>
+          <a href="https://www.faa.gov/uas/getting_started/fly_for_work_business/becoming_a_pilot" >
+          <h4 class="bbb">Learn how to get a licence</h4>
+          </a>
+        </ul>
+        <h3>For each flight:</h3>
+        <ul>
+          <li>Fill out and submit your request for permission at least two weeks in advance.</li>
+          <a href="../all-vpr-web/assets/Sample UAS Request.pdf">
+          <h4 class="bbb">Example Request</h4>
+          </a> <a href="../all-vpr-web/assets/UAS.Request.docx">
+          <h4 class="bbb">Blank Request Form</h4>
+          </a>
+          <li> Send the completed copy to the Operations Manager (uasoperationsmanager@virginia.edu). The more information you can provide the better.
+            <ul>
+              <li>Exactly where do you want to fly?</li>
+              <li>When do you want to fly?</li>
+              <li> What is the purpose of the flight</li>
+              <li> When possible submit a map or a sketch of the proposed flight area with the flight limits clearly marked.</li>
+              <li> If special waivers, authorizations or permission from the property owner are required, submit copies.  It may be necessary to request permission for multiple times or multiple days, even though you are not likely to operate at all these times.  For example, you might wish to fly in the morning, say on Tuesday the 20th, but as it is impossible to predict the weather far enough in advance, you request permission to fly Tuesday, Wednesday or Thursday, and explain that you will operate on one of these dates, depending on weather.</li>
+              <li> If you need to make a request for multiple flights, do so, but try to distinguish between multiple flights and weather contingencies.  The more obvious the justification of the request for multiple dates the easier it will be to review.  Example, you might ask to fly each Tuesday in April to capture the unique colors of spring.   A request to fly from 10:00 – 11:00 A.M. for the dates July 1, 2017 to December 31, 2017 might be difficult to review and approve.  If in doubt contact the Operations Manager to discuss your particular situation to arrive at a reasonable request which will in turn facilitate the best possible approval.   The Operations Manager will return your request with an approval (with conditions), a disapproval, or a request for more information.   If approved (with or without conditions), sign to accept and return a signed copy to the OM.  You should take a copy of the signed approval with you when you fly. </li>
+              <li> Depending on where and when you will be flying, your approval may require that you notify MedCom and/or the Albemarle County Emergency Communications Center.   The instructions and the phone numbers will be in your approval.</li>
+            </ul>
+          </li>
+          <li>When permission is received, sign the form and return it.</li>
+        </ul>
       </div>
       <!-- InstanceEndEditable --></div>
   </div>
 </div>
-<!-- InstanceBeginEditable name="CenterContent" --> 
-
-<div class="container-fluid">
-    <div class="row dotted"> 
-      <div class="col-sm-6">
-        <a href="http://uvapolicy.virginia.edu/policy/PROV-025" >
-          <h3 class="bbb">University Policy on Centers</h3>
-        </a>
-      </div>
-      <div class="col-sm-6">
-        <a href="http://planning.virginia.edu/pan-university-institutes">
-          <h3 class="bbb">Pan-University Institutes</h3>
-        </a>
-      </div>
-  </div>
-</div>
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="CenterContent" --> <!-- InstanceEndEditable -->
 <div class="container-fluid dotted">
   <div class="row">
     <div class="vpr-squares-flex vpr-squares-flex-1 col-sm-12"> <a href="../research-around-uva.html" class="flex-card">
@@ -181,7 +156,7 @@
       <div class="flex-card-inner">Economic Development</div>
       </a> <a href="../leadership.html" class="flex-card">
       <div class="flex-card-inner">VPR Leadership</div>
-      </a> <a href="../UAS/index.html" class="flex-card">
+      </a> <a href="index.html" class="flex-card">
       <div class="flex-card-inner">Unmanned Aircraft (UAS)</div>
       </a> </div>
   </div>
@@ -219,4 +194,5 @@
   </div>
 </footer>
 </body>
-<!-- InstanceEnd --></html>
+<!-- InstanceEnd -->
+</html>
