--- a/resources-for-researchers/faculty-onboarding.html
+++ b/resources-for-researchers/faculty-onboarding.html
@@ -58,8 +58,10 @@
           <li><a href="../Compliance/index.html">Compliance</a></li>
           <li><a href="../projects-and-initiatives.html">Initiatives</a></li>
           <li><a href="https://lvg.virginia.edu/">Licensing</a></li>
-          <li><a href="http://www.virginia.edu/sponsoredprograms/">Sponsorship</a></li>
+          <li><a href="http://www.virginia.edu/sponsoredprograms/">Sponsored Programs</a></li>
           <li><a href="index.html">Tools</a></li>
+          <li><a href="http://www.virginia.edu/vpr/news.html">News</a></li>
+          <li><a href="https://securelb.imodules.com/s/1535/16-uva/index.aspx?sid=1535&gid=16&pgid=684&cid=1509&dids=1161.1162.1163&bledit=1">Give</a></li>
         </ul>
       </div>
     </div>
@@ -101,40 +103,7 @@
   </div>
 </div>
 <!-- InstanceBeginEditable name="CenterContent" --> 
-<!--Begin: UVA Brand Template - Main Content -->
-<div class="main-content"> 
-  <!--Begin News Section-->
-  <div id="home-news-title" class="container-fluid ">
-    <div class="col dotted"></div>
-    <div class="row col centered"> <a href="/news.html">
-      <h3 class="section-heading">Recent News</h3>
-      </a> </div>
-  </div>
-  <div id="rss_feed"></div>
-  <div id="home-news" class="container home-news"></div>
-  <!-- End NEWS Setion --> 
-</div>
-<div class="full-width "></div>
-<!--<End News Section-->
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-sm-8 col-sm-offset-1">
-      <p>The Office of the Vice President for Research (VPR) is responsible for the integration and enhancement of research activities across UVA’s eleven schools and multiple research centers. VPR leads university-wide strategic growth activities, including multidisciplinary groups in environmental sustainability, innovation, energy systems, and biosciences. VPR also coordinates the various University units that comprise the research infrastructure, including the acquisition of research funding, the planning and development of academic research space, research commercialization, the incubation of new companies and recruiting of corporate research partners to local research parks, and public outreach.
-        
-        To gain a better understanding check out our recent news and</p>
-    </div>
-    <div class="col-sm-3 vpr-callout">
-      <h3 class="vpr-callout">By the Numbers</h3>
-      <ul>
-        <li> Federal Funding: <em>$260m</em> </li>
-        <li> Total Research: <em>$338m</em> </li>
-      </ul>
-      <p>UVa’s total research funding $338 million, of which $260 million is federal research dollars.</p>
-      <p><a class="vpr-callout" href="../all-vpr-web/assets/ResearchNumbers2018.pdf">Download the PDF</a></p>
-    </div>
-  </div>
-</div>
-<!--End: UVA Brand Template - Main Content --> 
+
 <!-- InstanceEndEditable -->
 <div class="container-fluid dotted">
   <div class="row">
