--- a/resources-for-researchers/index.html
+++ b/resources-for-researchers/index.html
@@ -58,8 +58,10 @@
           <li><a href="../Compliance/index.html">Compliance</a></li>
           <li><a href="../projects-and-initiatives.html">Initiatives</a></li>
           <li><a href="https://lvg.virginia.edu/">Licensing</a></li>
-          <li><a href="http://www.virginia.edu/sponsoredprograms/">Sponsorship</a></li>
+          <li><a href="http://www.virginia.edu/sponsoredprograms/">Sponsored Programs</a></li>
           <li><a href="index.html">Tools</a></li>
+          <li><a href="http://www.virginia.edu/vpr/news.html">News</a></li>
+          <li><a href="https://securelb.imodules.com/s/1535/16-uva/index.aspx?sid=1535&gid=16&pgid=684&cid=1509&dids=1161.1162.1163&bledit=1">Give</a></li>
         </ul>
       </div>
     </div>
@@ -146,6 +148,8 @@
           <li><a href="http://gradstudies.virginia.edu/"> Graduate & Postdoctoral Affairs </a></li>
           <li><a href="faculty-onboarding.html"> New Faculty On Boarding </a></li>
           <li><a href="http://uvapolicy.virginia.edu/"> Policy Directory </a></li>
+          <li><a href="http://sponsoredprograms.virginia.edu/">Sponsored Programs</a></li>
+          <li><a href="../Compliance/index.html">Research Compliance</a></li>
         </ul>
       </div>
       <!-- InstanceEndEditable --></div>
@@ -202,6 +206,63 @@
       </ul>
       <p>UVa’s total research funding $338 million, of which $260 million is federal research dollars.</p>
       <p><a class="vpr-callout" href="../all-vpr-web/assets/ResearchNumbers2018.pdf">Download the PDF</a></p>
+    </div>
+  </div>
+</div>
+<div class="container-fluid">
+  <div class="row dotted">
+    <div class="main-content">
+      <h3>Research Compliance Resources</h3>
+      <div class="flex-wrapper flex-wrapper-fourths"> <a href="http://www.virginia.edu/vpr/iacuc/" class="wrapper zoom-in"> <img src="../all-vpr-web/img/brand/sized-3-2/sponsored_research_2017_0029_adam-jang-218107-unsplash.jpg">
+        <div class="description">
+          <p class="description_content">Animal Care and Use Committee</p>
+        </div>
+        </a> <a href="http://ehs.virginia.edu/Biosafety.html" class="wrapper zoom-in"> <img src="../all-vpr-web/img/brand/sized-3-2/sponsored_research_2017_0016_Biology_Lab_03__MG_7538_160over90.jpg.jpg">
+        <div class="description">
+          <p class="description_content">Biosafety</p>
+        </div>
+        </a> <a href="https://www.virginia.edu/vpr/ccm/" class="wrapper zoom-in"> <img src="../all-vpr-web/img/brand/sized-3-2/sponsored_research_2017_0027_aleksi-tappura-669-unsplash.jpg">
+        <div class="description">
+          <p class="description_content">Center for Comparative Medicine </p>
+        </div>
+        </a> <a href="http://www.virginia.edu/vpr/Compliance/ComplianceTraining.html" class="wrapper zoom-in"> <img src="../all-vpr-web/img/brand/sized-3-2/sponsored_research_2017_0020_anton-mishin-538802-unsplash.jpg">
+        <div class="description">
+          <p class="description_content">Compliance Training</p>
+        </div>
+        </a> <a href="http://www.virginia.edu/vpr/Compliance/COI.html" class="wrapper zoom-in"> <img src="../all-vpr-web/img/brand/sized-3-2/site-photos_0000_jerry-kiesewetter-195442.jpg">
+        <div class="description">
+          <p class="description_content">Conflict of Interest</p>
+        </div>
+        </a> <a href="http://www.virginia.edu/vpr/ControlledSubstances/" class="wrapper zoom-in"> <img src="../all-vpr-web/img/brand/sized-3-2/sponsored_research_2017_0004_chuttersnap-233105-unsplash.jpg">
+        <div class="description">
+          <p class="description_content">Controlled Substances</p>
+        </div>
+        </a> <a href="http://ehs.virginia.edu/" class="wrapper zoom-in"> <img src="../all-vpr-web/img/brand/sized-3-2/sponsored_research_2017_0019_ashim-d-silva-628775-unsplash.jpg">
+        <div class="description">
+          <p class="description_content">Environmental Health & Safety</p>
+        </div>
+        </a> <a href="http://export.virginia.edu/" class="wrapper zoom-in"> <img src="../all-vpr-web/img/brand/sized-3-2/3-2_0038_didier-weemaels-36055.png">
+        <div class="description">
+          <p class="description_content">Export Controls</p>
+        </div>
+        </a> <a href="http://www.virginia.edu/vpr/hrpp/" class="wrapper zoom-in"> <img src="../all-vpr-web/img/brand/sized-3-2/3-2-photos-batch3_0011_martins-zemlickis-57243.jpg">
+        <div class="description">
+          <p class="description_content">Human Subjects</p>
+        </div>
+        </a> <a href="https://lvg.virginia.edu/innovators/patent-agreement-and-assignment-instructions" class="wrapper zoom-in"> <img src="https://support.coopercenter.org/sites/support/files/lead.png">
+        <div class="description">
+          <p class="description_content">Patient Agreement or Assignment</p>
+        </div>
+        </a> <a href="http://www.virginia.edu/vpr/Compliance/integrity.html" class="wrapper zoom-in"> <img src="../all-vpr-web/img/brand/sized-3-2/3-2_0017_luke-michael-275911.png">
+        <div class="description">
+          <p class="description_content">Research Integrity</p>
+        </div>
+        </a><a href="http://sponsoredprograms.virginia.edu/" class="wrapper zoom-in"> <img src="../all-vpr-web/img/brand/sized-3-2/3-2_0065_yaniv-knobel-120433.png">
+        <div class="description">
+          <p class="description_content">Sponsored Programs</p>
+        </div>
+        </a>
+      </div>
     </div>
   </div>
 </div>
