--- a/resources-for-researchers/research-development.html
+++ b/resources-for-researchers/research-development.html
@@ -58,8 +58,10 @@
           <li><a href="../Compliance/index.html">Compliance</a></li>
           <li><a href="../projects-and-initiatives.html">Initiatives</a></li>
           <li><a href="https://lvg.virginia.edu/">Licensing</a></li>
-          <li><a href="http://www.virginia.edu/sponsoredprograms/">Sponsorship</a></li>
+          <li><a href="http://www.virginia.edu/sponsoredprograms/">Sponsored Programs</a></li>
           <li><a href="index.html">Tools</a></li>
+          <li><a href="http://www.virginia.edu/vpr/news.html">News</a></li>
+          <li><a href="https://securelb.imodules.com/s/1535/16-uva/index.aspx?sid=1535&gid=16&pgid=684&cid=1509&dids=1161.1162.1163&bledit=1">Give</a></li>
         </ul>
       </div>
     </div>
