--- a/news.html
+++ b/news.html
@@ -34,6 +34,7 @@
 <!--    Access Analytics Script-->
 <script>var access_analytics={base_url:"https://analytics.ssbbartgroup.com/api/",instance_id:"AA-58bdcc11cee35"};(function(a,b,c){var d=a.createElement(b);a=a.getElementsByTagName(b)[0];d.src=c.base_url+"access.js?o="+c.instance_id+"&v=2";a.parentNode.insertBefore(d,a)})(document,"script",access_analytics);</script>
 <!-- InstanceBeginEditable name="head" -->
+   <script src="all-vpr-web/js/news.js"></script>
     <!-- InstanceEndEditable -->
 </head>
 
